--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -1,7 +1,7 @@
 .vertical {
 	padding-top: 150px;
 	padding-bottom: 150px;
-	
+
 
 }
 
@@ -26,4 +26,79 @@
     background-color: black;
     color: grey;
     text-align: center;
-} 
+}
+.edit_sale_box h2{
+	background-color: #39CCCC;
+	-webkit-border-radius: 10px 10px 0 0;
+	-moz-border-radius: 10px 10px 0 0;
+	border-radius: 10px 10px 0 0;
+	color: #fff;
+	font-size: 28px;
+	padding: 10px 16px;
+	margin-bottom:0px;
+}
+
+.edit_sale_box h2 span{
+	margin-right: 14px;
+}
+.edit_label{
+	display: inline-block;
+  width: 130px;
+  text-align: right;
+	font-weight: normal;
+}
+.edit_sale_box fieldset{
+	border-style: solid;
+	border-width: 2px;
+	border-color: silver;
+	border-top: none;
+	-webkit-border-radius: 0 0 10px 10px;
+	-moz-border-radius: 0 0 10px 10px;
+	border-radius: 0 0 10px 10px;
+	padding: 20px 26px;
+}
+
+input[readonly]{
+	background-color: #eee;
+	border:none;
+	text-align: right;
+}
+
+.edit_input{
+	text-align: right;
+	border-color:#eee;
+	color: #777;
+	padding: 4px 10px;
+	border-style: solid;;
+}
+.edit_sale_box select{
+	color: #777;
+	border-color:#eee;
+	border-style: solid;;
+}
+
+.edit_button{
+	margin-top: 5px;
+	display: inline-block;
+	position:relative;
+	left: 160px;
+}
+
+.edit_sale_box{
+	margin: 50px auto;
+	width: 400px;
+	font-size: 16px;
+}
+
+.button_primary{
+	background-color: #33cc77;
+	color: #fff;
+	border:none;
+	padding: 4px 0;
+	width: 100px;
+	position: relative;
+	right: 95px;
+}
+.button_primary:hover{
+	background-color: #28ad63;
+}
